--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,9 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-.vscode
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
